--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,12 +1,12 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+// jan logo brand color: ##880ee6
+$jan-purple: #880ee6
+$jan-purple-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $jan-purple
+$primary-invert: $jan-purple-invert
 $body-color: #333
 $black: #2b2523
 
@@ -61,10 +61,10 @@ $black: #2b2523
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: #3f0aa1
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
+    -webkit-box-shadow: inset 0 0 0 2px #131111
+    box-shadow: inset 0 0 0 2px #D90368
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
@@ -88,9 +88,9 @@ footer.footer
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
-$menu-item-active-color: $kaldi-red-invert
-$menu-item-active-background-color:	$kaldi-red-invert
-$menu-list-border-left: 1px solid $kaldi-red-invert
+$menu-item-active-color: $jan-purple-invert
+$menu-item-active-background-color:	$jan-purple-invert
+$menu-list-border-left: 1px solid $jan-purple-invert
 $menu-label-color: $white-ter
 
 
@@ -114,7 +114,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #d8c3ff;
 .blog-list-item header
   display: flex;
   margin-bottom: 1em;
