--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -8,7 +8,7 @@ $jan-purple-invert: #fff
 $primary: $jan-purple
 $primary-invert: $jan-purple-invert
 $body-color: #333
-$black: #2b2523
+$black: #2E294E
 
 .navbar .navbar-menu
   box-shadow:none !important
