--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -64,7 +64,7 @@ $black: #2E294E
     color: #3f0aa1
     text-align: center
     -webkit-box-shadow: inset 0 0 0 2px #131111
-    box-shadow: inset 0 0 0 2px #D90368
+    box-shadow: inset 0 0 0 2px #2E294E
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
