--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,4 +1,7 @@
 @import "~bulma/sass/utilities/initial-variables"
+@import "~bulma/sass/utilities/functions"
+@import "~bulma/sass/utilities/derived-variables"
+@import "~bulma/sass/utilities/mixins"
 
 // Config vars
 // jan logo brand color: ##880ee6
